src/objects/AssocDocSignature__c.object
<CustomObject>
    <fields>
        <fullName>AssociatedDocument__c</fullName>
        <label>AssociatedDocument</label>
        <referenceTo>AssocitedDocument__c</referenceTo>
        <relationshipLabel>AssocDocSignatures</relationshipLabel>
        <relationshipName>AssocDocSignatures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DocSignature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocSignature</label>
        <referenceTo>DocSignature__c</referenceTo>
        <relationshipLabel>AssocDocSignatures</relationshipLabel>
        <relationshipName>AssocDocSignatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signed_Date__c</fullName>
        <label>Signed Date</label>
        <type>Date</type>
    </fields>
    <label>AssocDocSignature</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AssocDocSignatures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>